<resources>
    <string name="app_name">pwd-mng</string>
    <string name="password">Contraseña:</string>
    <string name="favourite">Favorito</string>
    <string name="link">Link:</string>
    <string name="name">Nombre:</string>
    <string name="username">Usuario:</string>
    <string name="notes">Notas:</string>
    <string name="create_new_item">Crear nuevo registro</string>
    <string name="create">Crear</string>
    <string name="items">Mis contraseñas</string>
    <string name="edit_item">Editar registro</string>
    <string name="edit">Editar</string>
    <string name="password_danger">Contraseña demasiado corta</string>
    <string name="item_created">Registro creado</string>
    <string name="name_danger">El registro debe tener nombre</string>
    <string name="item_edited">Registrado editado</string>
</resources>